corpus/c/preprocessor_directive/case-01/snapshots/gcc13_14/single_sink_structured/render.ci.txt
src/main.c:1:2: error: [syntax] preprocessor directive error
help: inspect the failing preprocessor directive or disabled branch expression in the preserved raw diagnostics
raw : #error macro guard missing
| src/main.c:1:2
| #error macro guard missing
|  ^
macro: preserved
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output